# dada

./: .gitignore
gaz--devin-1781827510-project-plan/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  FINISH_PROJECT.md  MASTERPLAN.MD  MASTER_PLAN.md  Makefile  PROJECT_COMPLETION_PLAN.md  READINESS.md  README.md  SKILLS.md  TEST.md  audit.md  audit_request.txt  audit_utf8.txt  (+8 more)
gaz--devin-1781827510-project-plan/apps/api/: Dockerfile  README.md  alembic.ini  cron_weekly_report.py  generate_readiness_report.py  missing_methods.py  pyproject.toml  test_qdrant_rag.py
gaz--devin-1781827510-project-plan/apps/api/alembic/: env.py
gaz--devin-1781827510-project-plan/apps/api/alembic/versions/: b7917ceca4f4_initial_migration.py
gaz--devin-1781827510-project-plan/apps/api/app/: action_engine_executor.py  agent_templates.py  asterisk_ari_service.py  audit.py  billing_limits.py  billing_service.py  channel_diagnostics.py  channel_policy.py  context.py  database.py  db_models.py  demo_data.py  email_service.py  encryption.py  guard_rails.py  integration_readiness.py  integration_services.py  jobs.py  limiter.py  llm_router.py  logging_setup.py  main.py  orchestrator.py  parsers.py  policy_validator.py  publish_gate.py  rag.py  rag_eval.py  rbac.py  scenario_engine.py  schemas.py  security.py  service_factory.py  settings.py  speech_service.py  sqlalchemy_store.py  store.py  store_factory.py  supervisor.py  tenant.py  (+9 more)
gaz--devin-1781827510-project-plan/apps/api/app/api/v1/: admin.py  agents.py  analytics.py  api_keys.py  audit.py  auth.py  avito.py  billing.py  campaigns.py  conversations.py  crm.py  demo.py  dependencies.py  health.py  inbox.py  integrations.py  knowledge.py  meta.py  operator_ws.py  team.py  telegram.py  tenants.py  testbed.py  vk.py  voice.py  webhooks.py  whatsapp.py  widget.py
gaz--devin-1781827510-project-plan/apps/api/app/channels/: __init__.py  avito_adapter.py  meta_adapter.py  telegram_adapter.py  vk_adapter.py  whatsapp_adapter.py
gaz--devin-1781827510-project-plan/apps/api/app/contracts/: __init__.py  action_engine.py  billing.py  inbox.py  integrations.py  masking.py  outbound.py  types.py  voice.py
gaz--devin-1781827510-project-plan/apps/api/app/integrations/: amo_bitrix.py  amocrm.py  iiko.py
gaz--devin-1781827510-project-plan/apps/api/app/store/: __init__.py  agents.py  analytics.py  auth.py  base.py  billing.py  conversations.py  crm.py  in_memory.py
gaz--devin-1781827510-project-plan/apps/api/load_tests/: locustfile.py
gaz--devin-1781827510-project-plan/apps/api/scripts/: encrypt_existing_settings.py
gaz--devin-1781827510-project-plan/apps/api/tests/: conftest.py  test_agent_profile_tools.py  test_agent_templates.py  test_analytics_new.py  test_audit.py  test_auth_security.py  test_billing_limits.py  test_channel_policy_settings.py  test_channel_webhook_diagnostics.py  test_channels.py  test_contact_suppressions.py  test_core_mvp_flow.py  test_crm.py  test_crm_integrations.py  test_database.py  test_db_models.py  test_demo_data.py  test_encryption.py  test_guardrail_policy_settings.py  test_handoff.py  test_health.py  test_iiko_integration.py  test_inbox.py  test_integration_readiness.py  test_llm_router.py  test_localization.py  test_memory_summarization.py  test_migrations.py  test_new_features.py  test_outbound_campaigns.py  test_parsers.py  test_policy_validation.py  test_production_api.py  test_production_services.py  test_prompt_injection.py  test_rag.py  test_rag_eval.py  test_rag_ingestion.py  test_rbac_isolation.py  test_readiness_matrix.py  (+9 more)
gaz--devin-1781827510-project-plan/apps/api/tests/contracts/: test_action_engine_contracts.py  test_api_contracts.py  test_billing_idempotency.py  test_integrations_contracts.py  test_json_schema_examples.py  test_voice_state_machine.py
(+174 files in other folders)
