[project]
name = "gaz-api"
version = "0.1.0"
description = "FastAPI backend for the AI support platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==5.1.1",
    "alembic==1.18.4",
    "email-validator==2.2.0",
    "fastapi==0.115.6",
    "httpx>=0.27.0",
    "limits[redis]>=5.8.0",
    "openai>=2.43.0",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.7.1",
    "python-multipart>=0.0.32",
    "pyotp>=2.9.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "qdrant-client>=1.18.0",
    "sentry-sdk>=2.47.0",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.41",
    "twilio>=9.8.7",
    "uvicorn[standard]==0.34.0",
    "cryptography>=49.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.7",
    "httpx==0.28.1",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
    "safety>=3.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
