[project]
name = "gaz-api"
version = "0.1.0"
description = "FastAPI backend for the AI support platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib==5.1.1",
    "alembic==1.18.4",
    "email-validator==2.2.0",
    "fastapi==0.139.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "limits[redis]>=5.8.0",
    "openai>=2.43.0",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.7.1",
    "python-multipart>=0.0.32",
    "pyotp>=2.9.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "qdrant-client>=1.18.0",
    "sentry-sdk>=2.47.0",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.41",
    "twilio>=9.8.7",
    "uvicorn[standard]==0.34.0",
    "cryptography>=49.0.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "starlette>=1.0.1",
    "beautifulsoup4>=4.12.0",
    "yookassa>=3.0.0",
    "netaddr>=1.3.0",
    "jsonschema>=4.21.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "sentence-transformers>=3.0.0",
    "tenacity>=9.0.0",
    "arq>=0.26.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.26",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-redis>=4.6",
    "alembic>=1.13",
    "bandit>=1.7.9",
    "safety>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/api/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "yookassa.*",
    "yookassa",
    "netaddr.*",
    "netaddr",
    "twilio.*",
    "twilio"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
